[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hlda-cv"
version = "0.1.0"
description = "Reusable Harmonic Linear Discriminant Analysis utilities with descriptor pruning"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
  {name = "Alex Z"}
]
dependencies = [
  "numpy",
  "pandas",
  "scipy",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["hlda_cv", "hlda_cv.*"]
